utxos by asset add policy id filtering (#170)
* asset utxos: add policy id filtering

* fix unrelated compilation error

* update openapi
