# webserver/server/app/services/AssetUtxos.ts
@@ -7,14 +7,21 @@ export async function getAssetUtxos(request: {
     minSlot: number;
     maxSlot: number;
   };
-  assets: Buffer[];
+  fingerprints?: Buffer[];
+  policyIds?: Buffer[];
   dbTx: PoolClient;
 }): Promise<IAssetUtxosResult[]> {
   return await assetUtxos.run(
     {
       max_slot: request.range.maxSlot,
       min_slot: request.range.minSlot,
-      fingerprints: request.assets,
+      // pgtyped doesn't seem to have a way to have an optional array parameter,
+      // and an empty spread expansion fails with postgres.  Since none of these
+      // fields is nullable, an array with null should be equivalent to an empty
+      // array.
+      fingerprints:
+        request.fingerprints && request.fingerprints.length > 0 ? request.fingerprints : [null],
+      policyIds: request.policyIds && request.policyIds.length > 0 ? request.policyIds : [null],
     },
     request.dbTx
   );
